--- a/Report/chapter04--project-management.tex
+++ b/Report/chapter04--project-management.tex
@@ -3,6 +3,7 @@
 
 In order to manage this project, we split up administrative tasks between the members of the team to ensure that everyone had a role in management and keeping track of the project. We did this so all members had some responsibility and could ensure accountability throughout the project. This also improved efficiency as other members knew who to look to when needing help with a certain task and prevented all the load from being put onto one individual. We split up the roles as follows:
 
+
 \begin{itemize}
     \item \textbf{Chair of Meetings and Organiser} - Aamukta Thogata
     \item \textbf{Trello Board} - Prapti Patel
@@ -11,18 +12,23 @@ In order to manage this project, we split up administrative tasks between the me
     \item \textbf{Report} - Isha Selvakumaran
     \item \textbf{Deployment} - Yuliia Bohak
     \item \textbf{Meeting Scheduling} - Natalia Ahsan
-    \item \textbf{Meeting Notes} - Agrima Khare
+    \item \textbf{Meeting Minutes} - Agrima Khare
 \end{itemize}
 
-For the duration of the project, we kept logs and records of all meetings and all decisions made on Notion and Team Feedback. We planned a rough timeline for the project in the first week and prioritised the features to ensure that we could complete the most important features on time. 
+\vspace{30pt}
 
-As a team, we spent a lot of time planning and brainstorming before moving on to development ( mostly during winter break ) to ensure that we all had a clear vision of what we wanted the project to be and to ensure that we were all on the same page. This was very important to us as we noticed from previous projects that members having different visions can cause problems later on and disagreements or tasks being completed but then becoming redundant.
+For the duration of the project, we kept logs and records of all meetings and all decisions made on Notion and Team Feedback. We kept track of tasks on Trello. We planned a rough timeline for the project in the first week and prioritised features to ensure that we could complete the most important features on time.
+
+As a team, we spent a lot of time planning and brainstorming before moving on to development ( mostly during winter break ) to ensure that we all had a clear vision of what we wanted the project to be and to ensure that we were all on the same page. This was very important to us as we noticed from previous projects that members having different visions can cause problems later on and disagreements, or tasks being completed but then becoming redundant.
 
 Before starting coding, we also made sure to decide on a good tech stack. We decided to keep using Django for the backend as it was something we were all familiar with after the small group project, and this would enable us to make a good start on the backend in the early weeks. We used this to our advantage and focused on learning React for the frontend as a team during the first few weeks while clearing out most of the easier backend tasks using Django. This proved well for our team as it gave us time to learn something new without having to sacrifice many weeks without actually coding.
 
 We set expectations for the workload and how much we would aim to contribute early on and decided when we would meet each week and have kept this consistent over the last 3 months. Due to this, we have all been able to stick to deadlines and have had very few issues with tasks running over or not being completed.
 
-The use of our Trello here to assign weekly tasks aligns with principles from Kanban, allowing us to visualize tasks. However, as the project progressed, we shifted towards a more Agile approach, focusing on iterative improvements.
+The use of our Trello to assign weekly tasks aligns with principles from Kanban, allowing us to visualize tasks. However, as the project progressed, we shifted towards a more Agile approach, focusing on refining UI and iterative improvements to functionality or bug fixing.
+
+
+\vspace{20pt}
 
 We also went over some rules which we laid down to ensure that the project development would go smoothly. This included rules such as :
 
@@ -33,16 +39,17 @@ We also went over some rules which we laid down to ensure that the project devel
     \item For larger features, we would wait until a team meeting to approve a pull request so the team could review the changes.
 \end{itemize}
 
+\vspace{20pt}
 
-Although we kept to our ground rules as much as possible, at times, it was necessary to go down a different route and times when they would not have worked out:
+Although we kept to our ground rules as much as possible, at times, it was necessary to go down a different route:
 
 \begin{itemize}
     \item Though we all followed our roles for the most part, we sometimes made some changes. For example:
     \begin{itemize}
         \item A number of us worked on deployment as it was not feasible for one person to take on the whole task.
     \end{itemize}
-    \item We would not move Trello tasks punctually at times, and towards the end of the project, other methods of task tracking were also used.  
-    So, while our initial approach to project tracking with Trello was effective in the early stages, it became less practical towards the end. 
+    \item We would not move Trello tasks punctually at times, and towards the end of the project, other methods of task tracking were also used.
+    So, while our initial approach to project tracking with Trello was effective in the early stages, it became less practical towards the end.
     \item As more and more small changes were being made, pull requests became more frequent, and it was not convenient to have to wait until a meeting to merge them.
 \end{itemize}
 
@@ -51,9 +58,11 @@ These experiences showed us the importance of adapting our project management to
 Over the course of the last three months, we also did have some issues.
 
 \begin{itemize}
-    \item \textbf{Issues with deployment} and having to switch to Vercel and Render from PythonAnywhere. This was one of our most critical decisions and, although it caused significant delays initially, it proved to be a more stable and necessary decision.
+    \item \textbf{Issues with deployment} and having to switch to Vercel and Render from PythonAnywhere. This was one of our most critical decisions and, although it caused significant delays initially, it proved to be a more stable and necessary decision. This is mainly because websockets were not compatible with the free version of PythonAnywhere
     \item \textbf{Issues with Spotify Premium} and needing to add free music.
     \item \textbf{Issues with login}, requiring us to allow only one login per browser to avoid authentication token conflicts.
     \item \textbf{Calendar feature taking a lot longer than expected}, but ultimately becoming a much bigger and more useful feature.
     \item \textbf{Website design evolving over time}, especially after receiving feedback from the advisor.
 \end{itemize}
+
+We go into more detail about why we made these critical decisions in section 5.4 ( Changes in Implementation )
