--- a/Report/main.tex
+++ b/Report/main.tex
@@ -36,7 +36,7 @@ Natalia Ahsan\\                       %%% Add four author here
 Onessa Crispeyn\\                       %%% Add five author here
 Prapti Patel\\                        %%% Add six author here
 Yonna Khatri\\                      %%% Add seven author here
-Yuliia Bohakt\\                      %%% Add eight author here
+Yuliia Bohak\\                      %%% Add eight author here
 }
 \date{\today}
 
