--- a/Report/chapter02--objectives-and-stakeholders.tex
+++ b/Report/chapter02--objectives-and-stakeholders.tex
@@ -7,7 +7,7 @@
     \item \textbf{Facilitate Collaborative Learning:} Enable students to organize and participate in group study sessions effectively.
     \item \textbf{Enhance Academic Performance:} Support students in understanding complex topics through peer discussions and shared resources.
     \item \textbf{Build a Learning Community:} Foster a sense of community where students can motivate each other and learn collectively.
-    \item \textbf{Fill the Gap in the Market:} Address the lack of dedicated platforms for seemless group study, filling a gap in existing tools.
+    \item \textbf{Fill the Gap in the Market:} Address the lack of dedicated platforms for seamless group study (specifically catered to students), filling a gap in existing tools via ease of sharing materials, integrated music and studying planning and shared To-Do lists.
 \end{itemize}
 
 \section{Stakeholder}
@@ -17,39 +17,39 @@
 \begin{itemize}
     \item \textbf{Students (Primary Stakeholders):}
     \begin{itemize}
-        \item \textbf{Impact:} Students benefit directly from \textbf{The Study Spot}, which provides a focused, distraction-free study environment. Unlike social media, our platform keeps students on task while fostering real-time peer support for more productive group study sessions.  
-        
-        Features like analytics, rewards, and shared progress encourage consistency through friendly competition, motivating students to stay on track. The to-do list helps with planning, reducing last-minute cramming and improving work quality.  
-        
-        Beyond academics, \textbf{The Study Spot} builds a sense of community, combating study isolation and connecting students with like-minded peers for a more engaging and rewarding learning experience.
+        \item \textbf{Impact:} Students benefit directly from \textbf{The Study Spot}, which provides a focused, distraction-free study environment. While still keeping you connected, unlike social media, our platform keeps students on task while fostering real-time peer support for more productive group study sessions.
+
+        Features like analytics, rewards, and shared progress encourage consistency through friendly competition, motivating students to stay on track. The to-do list and calender helps with planning, reducing last-minute cramming and improving work quality.
+
+        Beyond academics, \textbf{The Study Spot} builds a sense of community, combatting study isolation and connecting students with like-minded peers for a more engaging and rewarding learning experience.
         \item \textbf{Age Group:} Designed for students across all levels (school to university).
     \end{itemize}
-    
+
     \item \textbf{Platform Developers and Administrators (Primary Stakeholders):}
     \begin{itemize}
-        \item \textbf{Impact:} To ensure functionality, data security, and a seamless user experience, developers must focus on building a reliable and efficient platform that keeps students engaged and satisfied. Their work directly impacts how well the platform performs, influencing user retention and overall success.  
+        \item \textbf{Impact:} To ensure functionality, data security, and a seamless user experience, we must focus on building a reliable and efficient platform that keeps students engaged and satisfied. Their work directly impacts how well the platform performs, influencing user retention and overall success.
 
-        A key priority is developing real-time collaborative tools that allow students to interact smoothly without lag or interruptions. These tools must be scalable to accommodate peak usage times, ensuring that large numbers of students can study together without performance issues.  
-        
-        Additionally, data security is critical. Developers must implement robust security measures to protect user information, ensuring that personal data, study notes, and chat interactions remain private and secure.  
-        
-        Continuous testing and troubleshooting are also essential. Regular updates, bug fixes, and performance improvements will help maintain the website’s reliability, preventing disruptions that could affect student productivity. By prioritizing these aspects, developers can create a stable, secure, and engaging platform that enhances the study experience for all users.
+        A key priority is developing real-time collaborative tools that allow students to interact smoothly without lag or interruptions. These tools must be scalable to accommodate peak usage times, ensuring that large numbers of students can study together without performance issues.
+
+        Additionally, data security is critical. We must implement robust security measures to protect user information, ensuring that personal data, study notes, and chat interactions remain private and secure.
+
+        Continuous testing and troubleshooting are also essential. Regular updates, bug fixes, and performance improvements will help maintain the website’s reliability, preventing disruptions that could affect student productivity. By prioritizing these aspects, we can create a stable, secure, and engaging platform that enhances the study experience for all users.
     \end{itemize}
 
     \item \textbf{Tutors / Teachers {Secondary Stakeholders}:}
     \begin{itemize}
-        \item \textbf{Impact:} The platform can enhance student engagement to their studies by facilitating a unified learning environment outside classroom hours, and allows educators to track student consistency to their studies through analytic streaks. It can also reduce repetitive questions as students can help each other via the app, meaning that tutors and teachers can spend time teaching more important lessons.
+        \item \textbf{Impact:} The platform can enhance student engagement to their studies by facilitating a unified learning environment outside classroom hours, students will motivate each other through competing for badges and comparing study streaks. This will help relieve the load for teachers and help keep students engaged on studies outside of lessons.
     \end{itemize}
 
     \item \textbf{Parents {Secondary Stakeholders}:}
     \begin{itemize}
-        \item \textbf{Impact:} The parents will benefit from an increased visibility into their child's learning habits through the employment of the scheduler and analytics tool in the website. It will increase their child's academic performance with reduced need of physical study groups that require transportation .
+        \item \textbf{Impact:} The parents will benefit from an increased visibility into their child's learning habits through the scheduler and analytics tool in the website. It will increase their child's academic performance with reduced need of physical study groups that require transportation .
     \end{itemize}
-\end{itemize}  
+\end{itemize}
 
 \subsection{Stakeholder analysis}
-Students and administrators are high-power, high-interest stakeholders due to their direct influence on the platform’s functionality and design. As the primary users, students drive continuous improvement by providing feedback that shapes future updates, while administrators oversee technical decisions to maintain platform stability and scalability.  
+Students and administrators are key stakeholders due to their direct influence on the platform’s functionality and design. As the primary users, students drive continuous improvement by providing feedback that shapes future updates, while administrators oversee technical decisions to maintain platform stability and scalability.
 
-In contrast, parents and tutors are low-interest stakeholders, with minimal engagement and indirect influence over the platform’s functionality. However, their concerns, particularly regarding privacy and security, must still be addressed through clear communication.  
+In contrast, parents and tutors are low-interest stakeholders, with minimal engagement and indirect influence over the platform’s functionality. However, their concerns, particularly regarding privacy and security of online communications, must still be addressed through clear communication.
 
 To effectively manage these dynamics, targeted engagement strategies are essential. Implementing feedback loops, such as surveys, allows for rapid iteration and user-driven enhancements. At the same time, proactive communication ensures that parents and tutors remain informed about key aspects like data security. This structured approach helps maintain a user-focused, goal-oriented platform that continuously evolves based on stakeholder needs.
