Update ER Diagram
Signed-off-by: Aamukta Thogata <aamukta.thogata@gmail.com>

--- a/Report/chapter05--design-and-implementation.tex
+++ b/Report/chapter05--design-and-implementation.tex
@@ -24,7 +24,7 @@ Our system consists of a relational database (Django Models) for structured data
 
 \begin{figure}
     \centering
-    \includegraphics[width=1\linewidth]{ER-diagram.png}
+    \includegraphics[width=1\linewidth]{ER-diagram}
     \caption{Finalised ER Diagram}
     \label{fig:er-diagram}
 \end{figure}
