--- a/Report/chapter01--introduction.tex
+++ b/Report/chapter01--introduction.tex
@@ -6,6 +6,9 @@ At its core, \textbf{The Study Spot} is more than just a study tool: It is a com
 
 Students using \textbf{The Study Spot} will benefit from better time management, a sense of responsibility, and access to a shared study environment that makes learning more interactive. By turning study sessions into a social and structured experience, our platform enhances both productivity and engagement, helping students develop better study habits and achieve their academic goals with greater ease.
 
+Our deployed website can be found at:
+\href{https://github.com/GummyBearAmnesia/virtual-study-room/blob/main/virtual-study-room-phi.vercel.app}{\textit{virtual-study-room-phi.vercel.app}}
+
 \subsection*{Unique Selling Point (USP)}
 During our research, we identified a gap in the market - no dedicated platform offered a comprehensive group study experience with all the features we had envisioned. The Study Spot stands out with its Shared Materials Box, which allows users to upload and access documents, PDFs, and notes directly within the study room. This eliminates the need to send files via email or switch between platforms, easing and facilitating collaboration.
 
